# pidgin-birthday-reminder

./: .bzrignore  .gitignore  AUTHORS  AUTHORS.md  CHANGES.md  ChangeLog  Makefile  Makefile.am  Makefile.am.in  Makefile.in  Makefile.mingw  README  README.linux_binary  README.md  README.win32  VERSION  aclocal.m4  autogen.sh  build-debian-package.sh  build-linux-x86-package.sh  build-win32-package.sh  change_version.sh  config.h  config.h.mingw  config.status  configure  configure.ac  configure.ac.in  configure.in  configure.in.in  index.html  install_linux_package.sh  libtool  local.mak  po-update.sh
.tx/: config
autom4te.cache/: output.0  requests  traces.0
debian/: README.Debian  changelog.in  control  copyright.in  rules
po/: Makefile  Makefile.in  Makefile.mingw  POTFILES  POTFILES.in  cs.po  de.gmo  de.po  el.po  es.gmo  es.po  fr.gmo  fr.po  gl.po  he.po  it.po  lt.po  nl.po  pidgin-birthday-reminder.pot  pl.po  pt.po  pt_BR.po  ru.gmo  ru.po  sk.po  ta.po  tr.po
scripts/: gen-configure_ac.sh  gen-mingw-config_h.sh  gen_mingw_config_h.sh  po-update.sh  version-change.sh
share/: Makefile.am  Makefile.in
share/appdata/: Makefile.am  pidgin-birthday-reminder.metainfo.xml.in
share/pixmaps/: Makefile.am  Makefile.in
share/sounds/: Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  birthday_access.c  birthday_access.h  birthday_list.c  birthday_list.h  birthday_reminder.c  birthday_reminder.h  check.c  check.h  emblems.c  emblems.h  functions.c  functions.h  hash.c  hash.h  icsexport.c  icsexport.h  input.c  input.h  internal.h  notification.c  notification.h  pidgin_internals.c  pidgin_internals.h  plugin_actions.c  plugin_actions.h  prefs.c  prefs.h  scan.c  scan.h  tooltip.c  tooltip.h
src/.deps/: birthday_reminder.Plo
