EXTRA_DIST = \
	CHANGES.md \
	VERSION \
	Makefile.mingw \
	src/Makefile.mingw \
	po/Makefile.mingw \
	scripts/gen-mingw-config_h.sh \
	src/internal.h \
	src/birthday_access.h \
	src/birthday_list.h \
	src/birthday_reminder.h \
	src/check.h \
	src/emblems.h \
	src/functions.h \
	src/hash.h \
	src/icsexport.h \
	src/input.h \
	src/notification.h \
	src/pidgin_internals.h \
	src/plugin_actions.h \
	src/prefs.h \
	src/scan.h \
	src/tooltip.h

SUBDIRS = src po share

ACLOCAL_AMFLAGS=-I m4
