#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(birthday_reminder, 1.2.1, freakazoid@htwm.de)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/birthday_reminder.c])
AC_CONFIG_HEADER([config.h])

AC_DEFINE_UNQUOTED(PLUGIN_VERSION, ["1.2.1"], [Define the plugin version to be used])

AC_DEFINE_UNQUOTED(PLUGIN_WEBSITE, ["http://freakazoid.teamblind.de/"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_ID, ["gtk-freakazoid-birthday_reminder"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_STATIC_NAME, ["birthday_reminder"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_AUTHOR, ["Konrad Gräfe <freakazoid@teamblind.de>"], [Define the plugin author to be used])


# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL
GETTEXT_PACKAGE=birthday_reminder
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], [Define the gettext package to be used])
ALL_LINGUAS="de ru"
AM_GLIB_GNU_GETTEXT

# Checks for libraries.
PKG_CHECK_MODULES(pidgin, [pidgin >= 2.5.2], , [AC_MSG_ERROR(pidgin >= 2.5.2 required!)])
LIBS="$LIBS $pidgin_LIBS"
CFLAGS="$CFLAGS $pidgin_CFLAGS -Wall"

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 po/Makefile.in
		 share/Makefile
		 share/sounds/Makefile
		 share/pixmaps/Makefile])
AC_OUTPUT

